--- a/docs/V2.md
+++ b/docs/V2.md
@@ -402,3 +402,43 @@ func simulateCall(cstx *Transaction) {
     - Local transaction
         - Fails when it tries to write on locked state variable
 2. State Shard creates a State Shard Block with `TxOrdering` and sends it to Orchestrator Shard
+
+---
+
+## Implementation Notes
+
+This section documents differences between the design specification above and the actual codebase implementation. These are intentional architectural choices, not bugs.
+
+### CtToOrder Type
+
+**Design:** `CtToOrder []Transaction` (line 190)
+
+**Implementation:** `CtToOrder []CrossShardTx` in `protocol/types.go`
+
+**Reason:** The implementation uses `CrossShardTx` which is a superset of `Transaction` with additional fields for cross-shard coordination (simulation status, error tracking, etc.). This is functionally equivalent but more explicit about the cross-shard nature of these transactions.
+
+### NoStateError Detection
+
+**Design:** Explicit `NoStateError` exceptions thrown mid-execution when accessing external shard state (Section 1, Step 4)
+
+**Implementation:** Tracer-based detection via `CrossShardTracer.OnEnter()` in `orchestrator/statedb.go`
+
+**How it works:**
+- `CrossShardTracer` hooks into EVM's `OnEnter` callback to capture all CALL/DELEGATECALL/STATICCALL operations
+- External calls (to addresses on different shards) are recorded as "pending external calls"
+- After EVM execution completes, `HasPendingExternalCalls()` detects cross-shard access
+- For each pending call, `RwSetRequest` is sent to the target shard's `/rw-set` endpoint
+- The returned RwSet is merged and the transaction is re-executed with preloaded state
+
+**Benefits:**
+- **Batch detection:** All external calls in one execution are captured together
+- **No EVM modifications:** Uses standard go-ethereum tracing hooks
+- **Cleaner control flow:** No exception handling, just iteration based on pending calls
+
+See `orchestrator/simulator.go:runSimulation()` for the iterative re-execution loop.
+
+### Merkle Proofs (V2.3)
+
+**Status:** Deferred (documented in `docs/TODO.md`)
+
+The `ReadSetItem.Proof` field exists but is always empty. Full Merkle proof validation requires light client infrastructure and state proof generation which is not yet implemented. This is tracked as a future enhancement.
