address review feedback: update docs, fix comment
- Fix misleading "V2.3" version number in simulator.go comment
- Update V2.md Implementation Notes to document lazy fetching approach
- Update TODO.md:
  - V2.2: Mark as using lazy fetching instead of iterative re-execution
  - V2.5: Mark as N/A (consistency verification not needed with lazy fetching)
  - Update implementation priority section

--- a/docs/V2.md
+++ b/docs/V2.md
@@ -417,25 +417,29 @@ This section documents differences between the design specification above and th
 
 **Reason:** The implementation uses `CrossShardTx` which is a superset of `Transaction` with additional fields for cross-shard coordination (simulation status, error tracking, etc.). This is functionally equivalent but more explicit about the cross-shard nature of these transactions.
 
-### NoStateError Detection
+### Cross-Shard State Fetching
 
-**Design:** Explicit `NoStateError` exceptions thrown mid-execution when accessing external shard state (Section 1, Step 4)
+**Design:** Iterative re-execution with `NoStateError` detection and `RwSetRequest/RwSetReply` flow (Section 1, Steps 4-5)
 
-**Implementation:** Tracer-based detection via `CrossShardTracer.OnEnter()` in `orchestrator/statedb.go`
+**Implementation:** Single-pass execution with lazy state fetching in `orchestrator/simulator.go`
 
 **How it works:**
-- `CrossShardTracer` hooks into EVM's `OnEnter` callback to capture all CALL/DELEGATECALL/STATICCALL operations
-- External calls (to addresses on different shards) are recorded as "pending external calls"
-- After EVM execution completes, `HasPendingExternalCalls()` detects cross-shard access
-- For each pending call, `RwSetRequest` is sent to the target shard's `/rw-set` endpoint
-- The returned RwSet is merged and the transaction is re-executed with preloaded state
+- `SimulationStateDB` lazily fetches state from any shard on-demand during EVM execution
+- When EVM accesses an address (via CALL, SLOAD, etc.), `getOrFetchAccount()` transparently fetches bytecode and balance via HTTP from the owning shard
+- When EVM reads storage (SLOAD), `GetStorageAt()` fetches the specific slot from the owning shard via HTTP
+- All accessed addresses and storage slots are tracked during execution
+- At the end of single-pass execution, `BuildRwSet()` constructs the complete RwSet from tracked reads/writes
 
 **Benefits:**
-- **Batch detection:** All external calls in one execution are captured together
-- **No EVM modifications:** Uses standard go-ethereum tracing hooks
-- **Cleaner control flow:** No exception handling, just iteration based on pending calls
+- **Simpler architecture:** No iteration loop, no tracer, no re-execution needed
+- **On-demand fetching:** State is fetched only when accessed, not pre-fetched
+- **Single HTTP request per unique state access:** Each bytecode/storage slot fetched once and cached
 
-See `orchestrator/simulator.go:runSimulation()` for the iterative re-execution loop.
+**Trade-off:**
+- Multiple HTTP requests for contracts with many storage reads (vs batched `RwSetRequest`)
+- Acceptable for PoC; can be optimized with batch fetching if needed
+
+See `orchestrator/simulator.go:runSimulation()` for the single-pass execution flow.
 
 ### Merkle Proofs (V2.3)
 
